...
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:background="@drawable/menu_button"
            android:onClick="switchActivity"
            android:text="Play"
            app:layout_constraintBottom_toTopOf="@+id/button16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button15"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
...
