<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_radiant"
    tools:context="com.example.s1552344.myapplication.DifficultySelect">


    <Button
        android:id="@+id/button41"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/help"
        android:onClick="switchHelp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/back"
        android:onClick="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toTopOf="@+id/button41"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button42"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:background="@drawable/menu_button"
            android:onClick="easy"
            android:text="easy"
            app:layout_constraintBottom_toTopOf="@+id/button44"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button43"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button43"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:background="@drawable/menu_button"
            android:onClick="easiest"
            android:text="easiest"
            app:layout_constraintBottom_toTopOf="@+id/button45"
            app:layout_constraintEnd_toStartOf="@+id/button42"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button44"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:background="@drawable/menu_button"
            android:onClick="hard"
            android:text="hard"
            app:layout_constraintBottom_toTopOf="@+id/button46"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button45"
            app:layout_constraintTop_toBottomOf="@+id/button42" />

        <Button
            android:id="@+id/button45"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:background="@drawable/menu_button"
            android:onClick="medium"
            android:text="medium"
            app:layout_constraintBottom_toTopOf="@+id/button46"
            app:layout_constraintEnd_toStartOf="@+id/button44"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button43" />

        <Button
            android:id="@+id/button46"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:background="@drawable/menu_button"
            android:onClick="hardest"
            android:text="hardest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button45" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
